--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,29 @@
-name: Auto Deploy
+name: Build and deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
-      - name: Install and Deploy 🔧
+      - name: Set Git Identity
+        run: |
+          git config --global user.email "catherine.vasyuk11@gmail.com"
+          git config --global user.name "KHARKIVSKA-KURKUMA"
+
+      - name: Install, lint, build 🔧
         run: |
           npm install
+          npm run lint:js
           npm run deploy
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.0
+        with:
+          branch: gh-pages
+          folder: build
