--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "dev": "vite --open",
     "build": "vite build",
     "lint:js": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "modern-normalize": "^2.0.0",
@@ -27,7 +25,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "gh-pages": "^6.0.0",
     "vite": "^4.4.5"
   }
 }
