--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "homepage": "https://KHARKIVSKA-KURKUMA.github.io/CarRent/",
   "scripts": {
-    "dev": "vite --open",
+    "start": "vite --open",
     "build": "vite build",
     "lint:js": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
