add some fields to form

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.9",
+    "@mui/x-date-pickers": "^6.18.3",
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "modern-normalize": "^2.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
